Text Alignment fix

--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -15,3 +15,7 @@
   font-size: var(--fz-sm);
   margin-top: 2.2rem;
 }
+
+.content-page-content .paragraph-style {
+  margin-top: 20px;
+}
