--- a/styles/mobile-responsive.css
+++ b/styles/mobile-responsive.css
@@ -48,6 +48,16 @@
     width: 50%;
     min-height: 60vh;
   }
+  .footer-content-contaienr .social-styled-list-icon {
+    display: flex;
+    -moz-box-align: center;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    flex-direction: row;
+  }
 }
 @media (max-width: 768px) {
   .left-side-layout {
@@ -267,6 +277,22 @@
   .about-image-cell img {
     max-width: 300px;
   }
+  .large-heading-below {
+    color: var(--light-slate);
+    font-family: var(--font-sans);
+    font-weight: 800;
+    line-height: 1.1;
+    font-size: clamp(40px, 8vw, 60px);
+    margin-top: 5px;
+  }
+
+  .paragraph-style {
+    max-width: 40rem;
+    font-family: var(--font-sans);
+    font-weight: 500;
+    font-size: var(--fz-md);
+    line-height: 1.3;
+  }
 }
 
 @media (max-width: 600px) {
@@ -276,6 +302,23 @@
     font-family: var(--font-mono);
     font-size: var(--fz-sm);
     font-weight: 600;
+  }
+
+  .large-heading-below {
+    color: var(--light-slate);
+    font-family: var(--font-sans);
+    font-weight: 800;
+    line-height: 1.1;
+    font-size: clamp(40px, 8vw, 60px);
+    margin-top: 5px;
+  }
+
+  .paragraph-style {
+    max-width: 40rem;
+    font-family: var(--font-sans);
+    font-weight: 500;
+    font-size: var(--fz-md);
+    line-height: 1.3;
   }
 }
 
